fix Ajuste de overflow na tabela

--- a/source/components/table/table.styl
+++ b/source/components/table/table.styl
@@ -37,7 +37,7 @@ $cell {
    Table Elements
 ========================================================================== */
 .wrap {
-  overflow: auto;
+  overflow: unset;
   position: static;
 
   &.isScrollY {
